fix: z-index on sidebar

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -54,6 +54,7 @@ body {
 
 .md-sidebar--primary {
   top: -15px !important;
+  z-index: 10;
 }
  
 @media screen and (max-width: 76.1875em) {
